--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -31,6 +31,42 @@
         android:textColor="@color/black"
         android:textColorHint="#292626" />
 
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_marginTop="20dp">-->
+
+<!--        <RadioGroup-->
+<!--            android:id="@id/create_priority"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <RadioButton-->
+<!--                android:id="@+id/low"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginEnd="10dp"-->
+<!--                android:text="Low" />-->
+
+<!--            <RadioButton-->
+<!--                android:id="@+id/medium"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginEnd="30dp"-->
+<!--                android:text="Medium" />-->
+
+<!--            <RadioButton-->
+<!--                android:id="@+id/high"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginEnd="10dp"-->
+<!--                android:text="High" />-->
+<!--        </RadioGroup>-->
+
+<!--    </LinearLayout>-->
+
     <EditText
         android:id="@+id/create_priority"
         android:layout_width="match_parent"
@@ -41,6 +77,74 @@
         android:padding="15dp"
         android:textColor="@color/black"
         android:textColorHint="#292626" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/fromTime"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/custom_edittetext"
+            android:ems="10"
+            android:hint="From Time"
+            android:inputType="time"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#292626" />
+
+        <EditText
+            android:id="@+id/toTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_edittetext"
+            android:hint="To Time"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#292626"
+            android:ems="10"
+            android:inputType="time" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/fromDate"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_edittetext"
+            android:hint="From Date"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#292626"
+            android:ems="10"
+            android:inputType="date" />
+
+        <EditText
+            android:id="@+id/toDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_edittetext"
+            android:hint="To Date"
+            android:padding="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#292626"
+            android:ems="10"
+            android:inputType="date" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/save_button"
