--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D6F4"
+    style="@style/ScreenBackground"
     android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".SplashScreen">
@@ -15,7 +15,7 @@
         android:layout_gravity="center_horizontal"
         android:fontFamily="sans-serif"
         android:text="MyTasks"
-        android:textColor="#654EA0"
+        style="@style/TextColor"
         android:textSize="40sp"
         android:textStyle="bold" />
 
@@ -26,7 +26,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="sans-serif"
         android:letterSpacing="0.3"
-        android:text="Manage Your Day"
-        android:textColor="#423E3E"
+        android:text="Manages Your Day"
+        style="@style/hintText"
         android:textSize="16sp" />
 </LinearLayout>
