--- a/app/src/main/res/drawable/custom_edittext_dark.xml
+++ b/app/src/main/res/drawable/custom_edittext_dark.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#6FFFFFFF"/>
-    <stroke android:color="@color/black" android:width="1dp"/>
+    <solid android:color="@color/hinttext"/>
+    <stroke android:color="@color/back" android:width="1dp"/>
     <corners android:radius="20dp"/>
 </shape>
