--- a/app/src/main/res/layout/activity_create_card.xml
+++ b/app/src/main/res/layout/activity_create_card.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C9CDF3"
+    style="@style/ScreenBackground"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
@@ -16,7 +16,7 @@
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="Enter Task"
-        android:textColor="#270485"
+        style="@style/TextColor"
         android:textSize="36sp"
         android:textStyle="bold" />
 
@@ -28,44 +28,9 @@
         android:background="@drawable/custom_edittetext"
         android:hint="Enter Task"
         android:padding="15dp"
-        android:textColor="@color/black"
-        android:textColorHint="#292626" />
+        style="@style/TextColor"
+        android:textColorHint="@color/hinttext" />
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_marginTop="20dp">-->
-
-<!--        <RadioGroup-->
-<!--            android:id="@id/create_priority"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:orientation="horizontal">-->
-
-<!--            <RadioButton-->
-<!--                android:id="@+id/low"-->
-<!--                android:layout_width="100dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="10dp"-->
-<!--                android:text="Low" />-->
-
-<!--            <RadioButton-->
-<!--                android:id="@+id/medium"-->
-<!--                android:layout_width="100dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="30dp"-->
-<!--                android:text="Medium" />-->
-
-<!--            <RadioButton-->
-<!--                android:id="@+id/high"-->
-<!--                android:layout_width="100dp"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginEnd="10dp"-->
-<!--                android:text="High" />-->
-<!--        </RadioGroup>-->
-
-<!--    </LinearLayout>-->
 
     <EditText
         android:id="@+id/create_priority"
@@ -76,7 +41,7 @@
         android:hint="Priority"
         android:padding="15dp"
         android:textColor="@color/black"
-        android:textColorHint="#292626" />
+        android:textColorHint="@color/hinttext" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,7 +60,7 @@
             android:inputType="time"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:textColorHint="#292626" />
+            android:textColorHint="@color/hinttext" />
 
         <EditText
             android:id="@+id/toTime"
@@ -106,7 +71,7 @@
             android:hint="To Time"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:textColorHint="#292626"
+            android:textColorHint="@color/hinttext"
             android:ems="10"
             android:inputType="time" />
 
@@ -127,7 +92,7 @@
             android:hint="From Date"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:textColorHint="#292626"
+            android:textColorHint="@color/hinttext"
             android:ems="10"
             android:inputType="date" />
 
@@ -140,7 +105,7 @@
             android:hint="To Date"
             android:padding="15dp"
             android:textColor="@color/black"
-            android:textColorHint="#292626"
+            android:textColorHint="@color/hinttext"
             android:ems="10"
             android:inputType="date" />
 
@@ -151,6 +116,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:background="@drawable/buttonbackground"
         android:text="Save" />
 
 </LinearLayout>
