--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,19 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MyTasks" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/header</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/hinttext</item>
+        <item name="colorSecondaryVariant">@color/hinttext</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
+    <style name="ScreenBackground"><item name="android:background">@color/night</item></style>
+    <style name="TextColor"><item name="android:textColor">@color/white</item></style>
+    <style name="header"><item name="android:background">@color/hinttext</item></style>
+    <style name="inputText"><item name="android:src">@drawable/custom_edittext_dark</item></style>
+    <style name="hintText"><item name="android:color">@color/white</item></style>
 </resources>
